package ui.elements;

import ui.math.Vector3f;

public class Camera extends Item {

    public Camera(Vector3f position, Vector3f rotation) {
        super(position, rotation);
    }
    
}
